[package]
name = "nillion-nucs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12"
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
rstest = "0.21"
