[package]
name = "nillion-nucs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = { version = "0.4", features = ["serde"] }
k256 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12"
serde_json = "1.0"
sha2 = "0.10"
signature = "2.2"
thiserror = "2.0"

[dev-dependencies]
rand = "0.8"
rstest = "0.21"
