[package]
name = "nillion-nucs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ethers-core = "2.0"
hex = { version = "0.4", features = ["serde"] }
hex-literal = "0.4"
itertools = "0.14"
multibase = "0.9"
k256 = "0.13"
rand = "0.8"# Leave at 0.8 to avoid `rand_core` conflicts with `k256` 0.13.
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.14"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sha2 = "0.10"
signature = "2.2"
thiserror = "2.0"

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
serde_with = { version = "3.14", features = ["hex"] }
